home.html: change comments

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,10 +9,10 @@
 <p>
     Hello <span th:text="${userName}" id="foo">!!!!!</span>!!!
 </p>
-<div th:include="included1::fr1"></div>
+<div th:include="included1::fr1"></div> <!-- rename doesn't work for short target names - IDEA-206001 -->
 
-<div th:include="included1::fr2('have a good',${home_attr1})"></div> <!-- no navigation: https://youtrack.jetbrains.com/issue/IDEA-205379 -->
-<div th:include="included1::#fr3"></div> <!-- no navigation: https://youtrack.jetbrains.com/issue/IDEA-205378 -->
+<div th:include="included1::fr2('have a good',${home_attr1})"></div>
+<div th:include="included1::#fr3"></div>
 <div th:include="included/included2::fr4"></div>
 <div th:include="::samefilefragment_1"></div>
 <div th:include="this::samefilefragment_2"></div>
