--- a/src/main/resources/templates/included1.html
+++ b/src/main/resources/templates/included1.html
@@ -5,13 +5,14 @@
     <title>included1</title>
 </head>
 <body>
-<div th:fragment="fr1">
+<div th:fragment="fr0">
     <p th:text="'simple fragment: '+${home_attr2}"></p>
 </div>
-<div th:fragment="fr2(param1,param2)">
+<!-- parametrized fragment2 -->
+<div th:fragment="fragment2(param1,param2)">
     <p th:text="'fragment run with parameters:'+${param1}+'  '+${param2}"></p>
 </div>
-<div id="fr3">
+<div id="fragment3">
     <p th:text="'fragment refernced by #id: '+${home_attr3}"></p>
 </div>
 </body>
