--- a/src/main/resources/templates/includedToFoo.html
+++ b/src/main/resources/templates/includedToFoo.html
@@ -9,7 +9,7 @@
     <p th:text="'external fragment run with parameters:'+${param1}+'  '+${param2}"></p>
 </div>
 <div th:fragment="external_fragment_no_params">
-    <p th:text="'external fragment without params"></p>
+    <p th:text="'external fragment without params'"></p>
 </div>
 
 </body>
