tests for links

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -51,7 +51,7 @@
 </div>
 <p>---------------------------------------------</p>
 <!-- temp - some links test -->
-<p><a th:href="@{${my_url}}"> 1 </a></p>
+<p><a th:href="@{${myurl}}"> 1 </a></p>
 <p><a th:href="@{|/navigate?ex=${my_req_param}|}"> 2 </a></p>
 <p><a th:href="@{/navigate?ex='foo'}"> 3 </a></p>
 <p><a href="/navigate?ex='bar'"> 4 </a></p>
